--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -256,7 +255,18 @@
           </tr>
         </table>
 
-        <h3>2.8 Detection Strategy</h3>
+        <h3>2.8 Lynn Margulis on the Nature of Life</h3>
+        <p>Lynn Margulis transformed our understanding of life's emergence through her endosymbiosis theory—showing that complex cells arose from simpler organisms merging and cooperating. In her 1995 essay "What is life?", Margulis argued that life is fundamentally about <strong>autopoiesis</strong>: self-making, self-maintaining systems that continuously regenerate their components.</p>
+        <p>This aligns perfectly with the &tau;-flux framework. Autopoiesis <em>is</em> sustained &tau;-flux: life maintains itself by continuously cycling matter and energy, rebuilding its structure while preserving its pattern. Margulis showed that this process doesn't require a specific chemistry—it requires organization, boundaries, and continuous transformation.</p>
+        <p>Her work reveals that life can emerge from <strong>cooperation between different forms of matter</strong>. Mitochondria were once independent bacteria; chloroplasts were once free-living cyanobacteria. If Earth life built complexity through mergers, then &tau;-life elsewhere might do the same—silicon chains incorporating metal catalysts, plasma vortices exchanging electromagnetic patterns, polymer networks hosting replicating chemical cycles.</p>
+
+        <h3>2.9 Sara Seager on Detection Strategies</h3>
+        <p>Sara Seager's 2025 work on detecting biosignatures with JWST emphasizes that we must look beyond Earth-centric assumptions. Traditional biosignature searches focus on oxygen, methane, and water—all specific to carbon-based biochemistry in aqueous environments.</p>
+        <p>Seager proposes searching for <strong>thermodynamic disequilibrium</strong>: atmospheric compositions that cannot be explained by geology alone. A planet with ammonia and phosphine in the same atmosphere, for instance, suggests active chemistry maintaining an unstable state—a hallmark of life.</p>
+        <p>This is exactly what &tau;-flux predicts. Life, regardless of substrate, creates and maintains disequilibrium by cycling energy through matter. Seager's detection strategy—looking for persistent, organized departures from equilibrium—is a search for &tau;-flux signatures.</p>
+        <p>For silicon life on hot planets, we'd look for unexpected silicon-fluorine compounds. For plasma life in stellar atmospheres, we'd search for electromagnetic structures with abnormally long coherence times. For Titan's methane lakes, we'd measure nitrogen chemistry that can't be explained by photochemistry alone.</p>
+
+        <h3>2.10 Detection Strategy</h3>
         <p>To detect &tau;-life beyond Earth:</p>
         <ol>
           <li><strong>Measure disequilibria</strong> — chemical or physical states inconsistent with equilibrium</li>
@@ -269,6 +279,7 @@
       <section id="conclusion"><h2>Conclusion</h2>
         <p>Bennu delivered ribose, glucose, and polymers—&tau;-life precursors—to the early solar system. These molecules didn't arise on Earth; they came from space, forged in asteroids enriched with supernova dust.</p>
         <p>Life is not a carbon phenomenon. It's a <strong>&tau;-flux phenomenon</strong>. Wherever sustained, ordered mass-energy transformations occur with replication, life can emerge—in silicon deserts, sulfur seas, methane lakes, plasma vortices, or states of matter we haven't imagined yet.</p>
+        <p>Lynn Margulis showed us that life builds complexity through cooperation and merger. Sara Seager showed us how to detect life by its disequilibrium signatures. The &tau; framework unifies both insights: life is organized &tau;-flux, detectable through persistent departures from equilibrium, capable of emerging in any substrate that supports continuous transformation.</p>
         <p>The question NASA's Bennu samples answer: <strong>Are life's ingredients universal?</strong></p>
         <p>Yes.</p>
         <p>The question they raise: <strong>Where else are those ingredients building life right now?</strong></p>
@@ -279,6 +290,8 @@
           <li>Furukawa, Y. et al. (2025). <em>Sugars essential to life in samples from asteroid Bennu</em>, Nature Geoscience.</li>
           <li>Sandford, S. et al. (2025). <em>Nitrogen-oxygen rich polymers in Bennu samples</em>, Nature Astronomy.</li>
           <li>Nguyen, A. et al. (2025). <em>Abundant supernova dust in asteroid Bennu</em>, Nature Astronomy.</li>
+          <li>Margulis, L. (1995). <em>What is life?</em> Wills, C. & Bada, J. (eds.) in <em>The Spark of Life: Darwin and the Primeval Soup</em>.</li>
+          <li>Seager, S. (2025). <em>Prospects for detecting signs of life on exoplanets in the JWST era</em>. PMC12501172.</li>
           <li>Schulze-Makuch & Irwin (2006). <em>Life in the Universe: Expectations and Constraints</em>.</li>
           <li>Benner, S. A. (2010). <em>Defining Life</em>.</li>
           <li>McKay, C. (2016). <em>Life on Titan?</em></li>
@@ -300,4 +313,3 @@
   </div>
 </body>
 </html>
-```
